# world_engine_comfydemo

./: .gitignore  README.md  pyproject.toml
comfydemo/: .env.example  README.md  engine_loop.py  fal_hud.py  frame_hooks.py  play.py  play_hud.py  requirements.txt
examples/: benchmark.py  gen_sample.py  prof.py
src/: ae.py  patch_model.py  quantize.py  world_engine.py
src/model/: attn.py  base_model.py  kv_cache.py  world_model.py
