[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world_engine"
version = "1.5.0"
requires-python = ">=3.10"
dependencies = [
  "taehv @ https://github.com/madebyollin/taehv/archive/7dc60ec6601af2e668e31bc70acc4cb3665e4c22.zip",
  "torch==2.10.0",
  "einops",
  "tensordict==0.10.0",
  "transformers>=5.3.0",
  "ftfy",
  "diffusers",
  "huggingface-hub>=1.7.0",
  "omegaconf",
  "accelerate==1.12.0",
  # Triton (platform-specific)
  "triton==3.6.0; sys_platform == 'linux'",
  "triton-windows==3.6.0.post26; sys_platform == 'win32'",
  "gemlite @ https://github.com/dropbox/gemlite/archive/ebfcc197d694acd4ca8dfaadf5fceb3570401df3.zip",
]

[tool.setuptools]
packages = [
  "world_engine",
  "world_engine.model",
]

[tool.setuptools.package-dir]
world_engine = "src"

[dependency-groups]
dev = [
  "pytest",
  "pytest-benchmark",
  "opencv-python",
  "imageio[pyav]",
  "numpy",
]
